🐛 fix: layout shifting

--- a/packages/wtqdocs/styles/css/wathqny.css
+++ b/packages/wtqdocs/styles/css/wathqny.css
@@ -34,12 +34,17 @@
   }
 }
 
-:is(*, *::after, *::before) {
+:where(:is(*, *::after, *::before)) {
   box-sizing: border-box;
 }
 
 :where(html) {
   font-size: 20px;
+  height: 100%;
+  font-family: "Geist", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  -webkit-text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  text-size-adjust: none;
 }
 
 :where(body) {
@@ -47,10 +52,6 @@
   line-height: 1.5;
   scroll-behavior: smooth;
   height: 100%;
-  font-family: "Geist", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  -webkit-text-size-adjust: none;
-  -moz-text-size-adjust: none;
-  text-size-adjust: none;
   margin: 0;
   color: hsl(var(--darkest));
   background-color: hsl(var(--white));
