--- a/packages/wtqdocs/styles/scss/base/_base.scss
+++ b/packages/wtqdocs/styles/scss/base/_base.scss
@@ -58,28 +58,31 @@ $font-xs: 1rem;
   }
 }
 
-:is(*, *::after, *::before) {
+:where(:is(*, *::after, *::before)) {
   box-sizing: border-box;
 }
 
 :where(html) {
   font-size: 20px;
-}
-
-:where(body) {
-  overflow: hidden;
-  line-height: 1.5;  
-  scroll-behavior: smooth;
   height: 100%;
   font-family: "Geist", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-text-size-adjust: none;
   -moz-text-size-adjust: none;
   text-size-adjust: none;
+}
+
+:where(body) {
+  overflow: hidden;
+  line-height: 1.5;
+  scroll-behavior: smooth;
+  height: 100%;
   margin: 0;
   color: hsl(var(--darkest));
   background-color: hsl(var(--white));
 }
+
+
 
 :where(hr) {
   height: 0;
@@ -167,7 +170,7 @@ $font-xs: 1rem;
   }
 }
 
-:where(:is(ul[role="list"], ol[role="list"]))  {
+:where(:is(ul[role="list"], ol[role="list"])) {
   list-style: none;
 }
 
@@ -192,7 +195,7 @@ $font-xs: 1rem;
   top: -0.5em;
 }
 
-:where(:is(b, strong)){
+:where(:is(b, strong)) {
   font-weight: 800;
 }
 
